crates/tsuno-driver/tests/fixtures/snapshots/fail/rejects_open_mutable_reference_on_storage_dead.snap
---
source: crates/tsuno-driver/tests/snapshot_tests.rs
assertion_line: 85
expression: snapshot_output(output)
---
status: Some(1)
stdout:
FAIL opaque
  mutable reference close failed
  src/main.rs:1:26: 1:26
PASS bad_scope
  all assertions discharged
PASS main
  all assertions discharged

stderr:
