crates/tsuno-driver/tests/fixtures/snapshots/fail/rejects_overflowing_spec_integer_cast.snap
---
source: crates/tsuno-driver/tests/snapshot_tests.rs
assertion_line: 85
expression: snapshot_output(output)
---
status: Some(1)
stdout:
FAIL rejects_overflowing_spec_integer_cast
  spec integer cast overflowed
  src/main.rs:3:2: 3:2
PASS main
  all assertions discharged

stderr:
