crates/tsuno-driver/tests/fixtures/snapshots/fail/rejects_points_to_sugar_non_pointer.snap
---
source: crates/tsuno-driver/tests/snapshot_tests.rs
assertion_line: 85
expression: snapshot_output(output)
---
status: Some(1)
stdout:
UNSUPPORTED rejects_points_to_sugar_non_pointer
  `|-?->` raw pattern requires a raw pointer, found `i32`
  src/main.rs:5:1: 5:45

stderr:
