crates/tsuno-driver/tests/fixtures/snapshots/fail/rejects_prophecy_interpolation.snap
---
source: crates/tsuno-driver/tests/snapshot_tests.rs
assertion_line: 85
expression: snapshot_output(output)
---
status: Some(1)
stdout:
UNSUPPORTED set_to_two
  unexpected trailing tokens in //@ ens predicate
  src/main.rs:1:1: 6:2

stderr:
