crates/tsuno-driver/tests/fixtures/snapshots/fail/rejects_pure_fn_calling_later_definition.snap
---
source: crates/tsuno-driver/tests/snapshot_tests.rs
assertion_line: 85
expression: snapshot_output(output)
---
status: Some(1)
stdout:
UNSUPPORTED prepass
  pure function `first` body: unknown pure function `second`
  no-location

stderr:
