crates/tsuno-driver/tests/fixtures/snapshots/fail/rejects_raw_assert_outside_unsafe.snap
---
source: crates/tsuno-driver/tests/snapshot_tests.rs
expression: result
---
status: Some(1)
stdout:
UNSUPPORTED rejects_raw_assert_outside_unsafe
  raw assertions outside unsafe blocks are unsupported: src/main.rs:2:1: 2:77
  src/main.rs:3:9: 3:11
PASS main
  all assertions discharged

stderr:
