crates/tsuno-driver/tests/fixtures/snapshots/fail/rejects_raw_assert_where.snap
---
source: crates/tsuno-driver/tests/snapshot_tests.rs
expression: snapshot_output(output)
---
status: Some(1)
stdout:
FAIL rejects_raw_assert_where
  raw assertion failed
  src/main.rs:7:13: 7:18
PASS main
  all assertions discharged

stderr:
